fix horizontal scroll on narrow mobile screens; revise instructions
fix src/styles/headerfooter.css width, margin, padding
update MultilingualNumberTable.astro table max-width, margin, padding to match h+f
MultilingualNumberTable: add conversion \n to <br>
MultilingualNumberTable.astro: fix table width; add scrolling
MultilingualNumberTable.astro: put the instructions outside of the scrolling table
touch up texts

--- a/src/styles/headerfooter.css
+++ b/src/styles/headerfooter.css
@@ -1,14 +1,14 @@
 header,
-main {
-
+main,
+footer {
   padding: 1rem;
-  max-width: calc(100% - 2rem);
+  max-width: 1024px;
+  width: calc(100% - 2rem);
+  margin: auto;
 }
 
 header,
 footer {
-  margin: auto;
-  width: 1024px;
   font-size: 1.2rem;
   background-color: #e60073;
   color: #fff;
